Fix wrong font paths

--- a/src/app/scss/_typography.scss
+++ b/src/app/scss/_typography.scss
@@ -4,26 +4,26 @@
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(../fonts/HvzEKSJww3kCxuiAo2A.ttf) format('truetype');
+  src: local('PT Sans'), local('PTSans-Regular'), url(../fonts/bower_components/PTSans-Regular/HvzEKSJww3kCxuiAo2A.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Sans Bold'), local('PTSans-Bold'), url(../fonts/GQsSc1g4rdRdjJKZrNC3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
+  src: local('PT Sans Bold'), local('PTSans-Bold'), url(../fonts/bower_components/PTSans-Bold/GQsSc1g4rdRdjJKZrNC3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 400;
-  src: local('PT Sans Italic'), local('PTSans-Italic'), url(../fonts/MHY90P7jtyjpXuZ2cLKCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+  src: local('PT Sans Italic'), local('PTSans-Italic'), url(../fonts/bower_components/PTSans-Italic/MHY90P7jtyjpXuZ2cLKCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 700;
-  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(../fonts/lYDvubYemzYzN7GbLkInF5uFdDttMLvmWuJdhhgs.ttf) format('truetype');
+  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(../fonts/bower_components/PTSans-BoldItalic/lYDvubYemzYzN7GbLkInF5uFdDttMLvmWuJdhhgs.ttf) format('truetype');
 }
